test : command context test code
- commandContext now check subCommand type
- eventBuilder text fixtures update
- exceptions
- remove unnecessary implementation
- domain testFixtures update
no related issue